Phase36 ~ 40, 主要是前端渲染牌桌的逻辑
